# spiri_development_kit

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CONVENTIONS.md  Dockerfile  README.md  default.env  docker-compose.yaml  entrypoint.sh  pyproject.toml
.copier/: answers.dockerbuild.yml  answers.docs.yml
.devcontainer/: devcontainer.json
.github/workflows/: build-docker.yaml  build-docs.yaml
cache/certs/: fullchain.pem  fullchain_with_key.pem  ia.crt  ia.csr  ia.key  web.crt  web.csr  web.key  web.orig.key
data/None-12f0b2/: config.env
data/car-668abf/: config.env
data/dummy-test-8c7e0a/: config.env
data/dummy-test-9a9b9a/: config.env
data/dummy-test-bc39c8/: config.env
data/dummy_test-631b9f/: config.env
data/dummy_test-9e3454/: config.env
data/spiri-mu-2a1378/: config.env
data/spiri-mu-435d45/: config.env
data/spiri-mu-c091bd/: config.env
data/spiri_mu-1/: config.env
data/spiri_mu-11/: ca.crt  config.env
data/spiri_mu-17bcfaca-1c5d-4e50-b11f-a1ff34c42f92/: config.env
data/spiri_mu-2/: config.env
data/spiri_mu-2bbfa0/: config.env
data/spiri_mu-3/: ca.crt  config.env
data/spiri_mu-5/: ca.crt  config.env
data/spiri_mu-515856/: config.env
data/spiri_mu_1/: config.env
data/spiri_mu_no_gimbal-1/: config.env
data/spiri_mu_no_gimbal-6a8bf4/: config.env
data/webapp-example-0e1bbe/: config.env
robots/ARC/: options.yaml
robots/car/: options.yaml
robots/data/: options.yaml
robots/dummy-test/: options.yaml
robots/dummy_test/: options.yaml
spiriSdk/: dindocker.py  main.py  settings.py
tests/: test_dindocker.py
(+115 files in other folders)
