[project]
name = "sdk-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiodocker>=0.24.0",
    "docker>=7.1.0",
    "loguru>=0.7.3",
    "nicegui==2.15.0",
    "pytest>=8.3.5",
    "requests>=2.32.3",
]

[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["spiriSdk"]
package-dir = {"" = "."}

